--- a/colorGame.scss
+++ b/colorGame.scss
@@ -23,14 +23,22 @@ h1, h3 {
   margin-bottom: 0;
 }
 
+.selected {
+  background-color: #DB7093 !important;
+  color: #ffffff !important;
+}
+
 #topNav {
   display: flex;
   height: 10em;
-  background-color: #48D1CC;
+  background-color: #DB7093;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: #ffffff;
+  h1 {
+    font-size: 30px;
+  }
   #rgb {
     font-size: 2em;
     text-transform: uppercase;
@@ -42,14 +50,36 @@ h1, h3 {
   height: 2em;
   background-color: #ffffff;
   align-items: center;
-  color: #48D1CC;
-  h3:nth-child(1){
-    justify-content: flex-start;
+  color: #ffffff;
+  list-style-type: none;
+  margin-top: 0;
+  justify-content: center;
+  button {
+    border: none;
+    color: #DB7093;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    background-color: #ffffff;
+    height: 100%;
+    transition: all 0.3s;
+    -moz-animation: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    outline: none;
   }
-  h3:nth-child(2),
-  h3:nth-child(3){
-    color: black;
-    justify-content: flex-end;
+  button:hover {
+    color: white;
+    background: #DB7093;
+  }
+  #easyBtn {
+    margin-left: 2em;
+  }
+  #result {
+    color: #DB7093;
+    display: inline-block;
+    width: 15%;
+    text-align: center;
   }
 }
 
@@ -65,6 +95,10 @@ h1, h3 {
     margin: 0.5em;
     background-color: goldenrod;
     border-radius: 17%;
+    transition: background 0.3s;
+    -moz-animation: background 0.3s;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
   }
 }
 
