--- a/colorGame.css
+++ b/colorGame.css
@@ -86,4 +86,12 @@ h1, h3 {
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s; }
 
+@media only screen and (max-width: 502px) {
+  #topNav h1 {
+    font-size: 25px;
+    transition: all 0.2s; }
+  #topNav #rgb {
+    font-size: 1.5em;
+    transition: all 0.2s; } }
+
 /*# sourceMappingURL=colorGame.css.map */
